# VulkanDemos

BasicDemes/: settings.gradle.kts
BasicDemes/app/: build.gradle.kts
BasicDemes/app/src/main/: AndroidManifest.xml
BasicDemes/app/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt
BasicDemes/app/src/main/res/values/: strings.xml  themes.xml
BasicDemes/app/src/test/java/com/ahao/androidvulkantutorials/: ExampleUnitTest.java
BasicDemes/gradle/: libs.versions.toml
BasicDemes/triangle/: build.gradle.kts
BasicDemes/triangle/src/androidTest/java/com/ahao/triangle/: ExampleInstrumentedTest.java
BasicDemes/triangle/src/main/: AndroidManifest.xml
BasicDemes/triangle/src/main/assets/shaders/: triangle.vert.spv
BasicDemes/triangle/src/main/cpp/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  VulkanBase.cpp  VulkanBase.hpp  main.cpp
BasicDemes/triangle/src/main/java/com/ahao/triangle/: MainActivity.java
BasicDemes/triangle/src/main/res/values/: themes.xml
BasicDemes/triangle/src/main/res/values-night/: themes.xml
BasicDemes/triangle/src/main/shaders/: triangle.frag  triangle.vert
BasicDemes/triangle/src/test/java/com/ahao/triangle/: ExampleUnitTest.java
Triangle/: settings.gradle.kts
Triangle/app/src/androidTest/java/com/ahao/androidvulkantutorials/: ExampleInstrumentedTest.java
Triangle/app/src/main/cpp/: VulkanMain.cpp
Triangle/app/src/main/java/com/ahao/androidvulkantutorials/: MainActivity.java
Triangle/app/src/main/res/values-night/: themes.xml
Triangle/gradle/: libs.versions.toml
Triangle/gradle/wrapper/: gradle-wrapper.properties
